# opik-mcp

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  jest.config.js  opik-mcp-ide-guide.md  package-lock.json  package.json  plain.md  pyproject.toml  server.json
.cursor/: test.txt
.github/: CODEOWNERS  dependabot.yml  labeler.yml  release-drafter.yml
docs/: api-reference.md  architecture.md  auth-flow.md  configuration.md  design.md  ide-integration.md  index.html  migration-plan.md  open-questions.md  phase-1.md  sse-transport.md  streamable-http-transport.md  team-brief.md
scripts/: capture_bi_listener.py  sentry_smoke.py  sentry_smoke_realistic.py  smoke_live_be.py  smoke_mcp_session.py  smoke_wire_capture.py
src/: cli.ts  config.ts  debug-log.ts  index.ts  mcp-server.ts  test-client.ts  types.ts
tests/: capabilities-tools.test.ts  capabilities.test.ts  config-toolsets.test.ts  conftest.py  core-prompts.test.ts  dataset-tools.test.ts  examples.test.ts  index.test.ts  mcp-tools.test.ts  metrics-info.test.ts  opik-resources.test.ts  opik-sdk-context.test.ts  prompt-tools.test.ts  registration.test.ts  remote-auth.test.ts  request-context.test.ts  test_analytics_auth_rejected.py  test_analytics_boot_props.py  test_analytics_call_context.py  test_analytics_client.py  test_analytics_client_build_event.py  test_analytics_environment.py  test_analytics_errors.py  test_analytics_events.py  test_analytics_identity.py  test_analytics_lifespan.py  test_analytics_privacy.py  test_audit.py  (+34 more)
(+177 files in other folders)
